--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -18,7 +18,7 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<input
 			id="base-api-url"
-			value="https://q378xwwar3.execute-api.eu-west-2.amazonaws.com/dev/"
+			value="https://isoewik3qb.execute-api.eu-west-2.amazonaws.com/prod/"
 			type="hidden"
 		/>
 		<div id="root"></div>
